<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="note_empty_field">All fields must be completed</string>
    <string name="action_about">About</string>
    <string name="text_about">Licence</string>
    <string name="action_language">Русский язык</string>
    <string name="nav_item_pipes">Pipes</string>
    <string name="nav_item_tanks">Tanks</string>
    <string name="nav_item_losses">Losses</string>
    <string name="nav_item_filler">Filler</string>
    <string name="nav_item_bmm">Bottle washer</string>
    <string name="nav_item_sprayballs">Sprayballs</string>
    <string name="nav_item_poultry">Poultry</string>
    <string name="btn_pipes_flowD_text">Flow, m/s the diameter of the pipe</string>
    <string name="tv_pipes_flowD_flow">Flow,\nm3/h</string>
    <string name="tv_pipes_flowD_Diameter">Diameter of the pipe,\nmm</string>
    <string name="tv_pipes_flowD_m_s">Flow,\nm/s</string>
    <string name="tv_pipes_flowD_l_m">Flow,\nl/min</string>
    <string name="tv_pipes_flowD_l_s">Flow,\nl/s</string>
    <string name="btn_text_calculate">Calculate</string>
    <string name="btn_pipes_flowV_text">Flow, m3/h the speed of the flow</string>
    <string name="gv_pipes_flowV_header_min_flow_text">Minimal flow, m3/h \n(for 1.5 m/s)</string>
    <string name="gv_pipes_flowV_header_max_flow_text">Maximal flow, m3/h \n(for 2 m/s)</string>
    <string name="btn_pipes_flowS_text">The volume of solution in the pipe</string>
    <string name="tv_pipe_length">Pipe length, m</string>
    <string name="tv_pipe_volume">The volume of 1m pipe</string>
    <string name="tv_pipe_solution_volume">The volume of solution in the pipe, l</string>
    <string name="btn_pipes_flowT_text">Volume, depending on flow and time</string>
    <string name="tv_pipes_flowT_period">Period,\ns</string>
    <string name="tv_pipes_flowT_reps">Number of repetitions</string>
    <string name="tv_pipes_flowT_amount">Amount of the losses,\nl</string>
    <string name="tv_tanks_the_flow_to_the_sink_tanks">The flow to the sink tanks</string>
    <string name="tv_tanks_volume_of_the_solution_in_the_tank">Volume of the solution in the tank</string>
    <string name="tv_tanks_diameter">The diameter of the tank, m</string>
    <string name="tv_tanks_angle_spray">The angle of the spray, deg</string>
    <string name="tv_tanks_pollution_level">Pollution level</string>
    <string name="tv_tanks_estimated_flow">The estimated flow, m3/h</string>
    <string name="tv_tanks_cone_height">The height of the cone, m</string>
    <string name="tv_tanks_cylinder_height">The height of the cylinder, m</string>
    <string name="tv_tanks_volume_solution">The volume of the solution, m3</string>
    <string name="pollution_level_easy">Easy</string>
    <string name="pollution_level_medium">Medium</string>
    <string name="pollution_level_hard">Hard</string>
    <string name="btn_losses_pressure_loss">Pressure loss</string>
    <string name="tv_losses_flow_rate">Flow rate, m3/h</string>
    <string name="tv_losses_height_of_the_static_pressure">Height of the static pressure, m</string>
    <string name="tv_losses_number_of_turns">The number of turns</string>
    <string name="tv_losses_pressure_loss">Pressure loss, bar</string>
    <string name="btn_the_loss_of_detergent">The loss of detergent</string>
    <string name="text_tv_losses2_volume_circuit">The volume of the circuit, l</string>
    <string name="text_tv_losses2_volume_tank_to_the_washing">The volume of the CIP tank to the washing, l</string>
    <string name="text_tv_volume_tank_after_washing">The volume of the tank after washing, l</string>
    <string name="text_tv_losses2_concentration_end_wash">The concentration at the end of the wash, %</string>
    <string name="text_tv_losses2_concentration_beginning_wash">The concentration at the beginning of the wash, %</string>
    <string name="text_tv_losses2_used_concentrate">Used concentrate, l</string>
    <string name="text_tv_losses2_loss_detergent">The loss of detergent, %</string>
    <string name="text_btn_losses3_losses_of_caustic_soda">Losses of caustic soda</string>
    <string name="text_tv_losses3_concentrate_alkaline_detergent">The amount of concentrate alkaline detergent, %</string>
    <string name="text_tv_losses3_loss_of_liquid_caustic">The loss of liquid caustic, kg</string>
    <string name="text_btn_tanks3_loss_CO2">The loss of carbon dioxide</string>
    <string name="text_tv_tanks3_volume_tank">The volume of the tank, m3</string>
    <string name="text_tv_tanks3_atmospheric_pressure">Atmospheric pressure, m3</string>
    <string name="text_tv_tanks3_pressure_in_tank">The pressure in the tank, bar</string>
    <string name="text_tv_tanks3_concentration_naoh">Concentration NaOH, %</string>
    <string name="text_tv_tanks3_quantity_of_caustic_beats">The quantity of caustic beats</string>
    <string name="text_tv_tanks3_net_impact">Net impact, gl</string>
    <string name="text_tv_tanks3_temperature_in_tank">The temperature in the tank, deg.</string>
    <string name="text_tv_tanks3_residual_pressure">Residual pressure, bar</string>
    <string name="text_tv_tanks3_loss_CO2">The loss of carbon dioxide, kg</string>
    <string name="text_btn_losses4">Losses of solution depending on flow and time</string>
    <string name="text_tv_losses4_flow_m3_h">Flow, m3/h</string>
    <string name="text_tv_losses4_period_s">Period, s</string>
    <string name="text_tv_losses4_number_of_repetition">Number of repetition</string>
    <string name="text_tv_losses4_cost_of_water_rub_m3">Cost of water, rub/m3</string>
    <string name="text_tv_losses4_cost_of_drains_rub_m3">Cost of drains, rub/m3</string>
    <string name="text_tv_losses4_the_number_of_washes_per_year">The number of washes per year</string>
    <string name="text_tv_losses4_amount_of_the_losses_l">Amount of the losses, l</string>
    <string name="text_tv_losses4_loss_cycle_rub">Loss cycle, rub</string>
    <string name="text_tv_losses4_loss_per_year_rub">Loss per year, rub</string>
    <string name="text_btn_losses5">Heat loss calculation</string>
    <string name="text_tv_losses5_warming">Warming</string>
    <string name="text_tv_losses5_heating">Heating</string>
    <string name="text_tv_losses5_the_total_amount_of_energy_spent_fuel">The total amount of energy/spent fuel</string>
    <string name="text_tv_losses5_water_volume_m3">Water volume, m3</string>
    <string name="text_tv_losses5_water_temperature_deg">Water temperature, deg.</string>
    <string name="text_tv_losses5_required_water_temperature_deg">Required water temperature, deg.</string>
    <string name="text_tv_losses5_boiler_productivity">Boiler productivity, %</string>
    <string name="text_tv_losses5_energy_source">Energy source</string>
    <string name="text_tv_losses5_spent_energy_kw">Spent energy, kW</string>
    <string name="text_tv_losses5_spent_fuel_kg">Spent fuel, kg</string>
    <string name="text_tv_losses5flow_rate_m3">Flow rate, m3</string>
    <string name="text_tv_losses5period_min">Period, min</string>
    <string name="text_tv_losses5_temperature_beginning_heating">The temperature at the beginning of the heating, deg.</string>
    <string name="text_tv_losses5_temperature_of_heating_deg">Temperature of heating, deg.</string>
    <string name="text_tv_losses5_total_amount_energy1">The total amount of energy</string>
    <string name="text_tv_losses5_total_amount_energy2">The total amount of energy</string>
    <string name="text_tv_losses5_total_amount_fuel">The total amount of fuel</string>
    <string name="text_sp_losses5_energy_sources0">Coal</string>
    <string name="text_sp_losses5_energy_sources1">Anthracite</string>
    <string name="text_sp_losses5_energy_sources2">Cox</string>
    <string name="text_sp_losses5_energy_sources3">Tree</string>
    <string name="text_sp_losses5_energy_sources4">Natural gas</string>
    <string name="text_sp_losses5_energy_sources5">Bhutan</string>
    <string name="text_sp_losses5_energy_sources6">Propane</string>
    <string name="text_sp_losses5_energy_sources7">Household gas</string>
    <string name="text_sp_losses5_energy_sources8">Methane</string>
    <string name="text_sp_losses5_energy_sources9">Heavy fuel</string>
    <string name="text_sp_losses5_energy_sources10">Moderate fuel</string>
    <string name="text_sp_losses5_energy_sources11">Light fuel</string>
    <string name="text_sp_losses5_energy_sources12">Kerosene</string>
    <string name="text_sp_losses5_energy_sources13">Gasoil</string>
    <string name="text_sp_losses5_energy_sources14">Electricity</string>
    <string name="text_btn_filler">Flow to filler</string>
    <string name="text_tv_filler_the_number_of_filling_heads">The number of filling heads</string>
    <string name="text_tv_filler_optimal_flow_m3_h">Optimal flow, m3/h</string>
    <string name="text_tv_filler_a_compromise_flow_m3_h">A compromise flow, m3/h</string>
    <string name="text_btn_bottle_washer1">Time dosage pump</string>
    <string name="text_tv_bottle_washer1_productivity_l_h">Productivity, l/h</string>
    <string name="text_tv_bottle_washer1_the_outer_volume_l">Requried volume, l</string>
    <string name="text_tv_bottle_washer1_time_dosage_s">Time dosage, s</string>
    <string name="text_tv_bottle_washer1_header_based_on_the_performance_of_the_pump">Based on the performance of the pump</string>
    <string name="text_tv_bottle_washer1_header_calculation_actual_time_of_dosing">Calculation of the actual time of dosing (bottle washing)</string>
    <string name="text_tv_bottle_washer1_the_past_volume_of_concentrate_ml">The past volume of concentrate, ml</string>
    <string name="text_btn_bottle_washer2">Calculation of additives in the bottle washer</string>
    <string name="text_tv_bottle_washer2_manufacture">Manufacture</string>
    <string name="text_tv_bottle_washer2_the_amount_of_alkaline_baths_m3">The amount of alkaline baths, m3</string>
    <string name="text_tv_bottle_washer2_the_volume_of_the_bath_hot_rinsing_m3">The volume of the bath hot rinsing, m3</string>
    <string name="text_tv_bottle_washer2_the_volume_of_the_bath_warm_rinse_m3">the volume of the bath warm rinse, m3</string>
    <string name="text_tv_bottle_washer2_water_consumption_m3_h">Water consumption, m3/h</string>
    <string name="text_tv_bottle_washer2_the_nominal_performance_of_the_bottle_washer_b_h">The nominal performance of the bottle washer, b/h</string>
    <string name="text_tv_bottle_washer2_the_average_performance_of_the_bottle_washer_b_h">The average performance of the bottle washer, b/h</string>
    <string name="text_tv_bottle_washer2_the_transfer_of_the_caustic_in_the_bottle_ml">The transfer of the caustic in the bottle, ml</string>
    <string name="text_tv_bottle_washer2_while_working_in_bmm_month_h">While working in BMM month, h</string>
    <string name="text_tv_bottle_washer2_the_number_of_hours_per_shift_h">The number of hours per shift, h</string>
    <string name="text_tv_bottle_washer2_the_concentration_of_amp_washing">The concentration of amp washing, %</string>
    <string name="text_tv_bottle_washer2_the_concentration_of_antifoam">The concentration of antifoam, %</string>
    <string name="text_tv_bottle_washer2_the_concentration_of_antikiller">The concentration of Antikiller, %</string>
    <string name="text_tv_bottle_washer2_the_concentration_of_the_disinfectant">The concentration of the disinfectant, %</string>
    <string name="text_tv_bottle_washer2_tool">Tool</string>
    <string name="text_tv_bottle_washer2_one_time_loading_capacity_kg">One-time loading capacity, kg</string>
    <string name="text_tv_bottle_washer2_consumption_per_hour_kg">Consumption per hour, kg</string>
    <string name="text_tv_bottle_washer2_rate_per_shift_kg">Rate per shift, kg</string>
</resources>