<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pipes"
            android:icon="@drawable/pipe"
            android:title="@string/nav_item_pipes" />
        <item
            android:id="@+id/nav_tanks"
            android:icon="@drawable/tank"
            android:title="@string/nav_item_tanks" />
        <item
            android:id="@+id/nav_losses"
            android:icon="@drawable/losses"
            android:title="@string/nav_item_losses" />
        <item
            android:id="@+id/nav_filler"
            android:icon="@drawable/filler"
            android:title="@string/nav_item_filler" />
        <item
            android:id="@+id/nav_bmm"
            android:icon="@drawable/bmm"
            android:title="@string/nav_item_bmm" />
        <item
            android:id="@+id/nav_sprayballs"
            android:icon="@drawable/sprayballs"
            android:title="@string/nav_item_sprayballs" />
    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_poultry"
                android:icon="@drawable/duck"
                android:title="@string/nav_item_poultry" />
        </menu>
    </item>


</menu>
