<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="ru.zets_swe.calculator.fragments.FragmentTanks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp">


        <Button
            android:id="@+id/btn_tanks_flow_wash"
            style="@style/button_main"
            android:text="@string/tv_tanks_the_flow_to_the_sink_tanks" />

        <LinearLayout
            android:id="@+id/L_tanks_flow_wash"
            style="@style/notes_view"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_tanks_diameter" />

                <EditText
                    android:id="@+id/et_tanksF_diameter"
                    style="@style/editText_vertical"
                    android:hint="D"
                    android:inputType="number|numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:layout_weight="2"
                    android:text="@string/tv_tanks_angle_spray" />

                <EditText
                    android:id="@+id/et_tanks_angle_spray"
                    style="@style/editText_vertical"
                    android:hint="a"
                    android:inputType="number|numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_tanks_pollution_level" />

                <Spinner
                    android:id="@+id/sp_tanks_pollution_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_tanks_estimated_flow" />

                <EditText
                    android:id="@+id/et_tanks_estimated_flow"
                    style="@style/editText_vertical_calculate" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/tank_flow_wash" />

            <Button
                android:id="@+id/btn_tanks_flow_wash_calculate"
                style="@style/button_calculate" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_tanksF_volume_solution"
            style="@style/button_main"
            android:text="@string/tv_tanks_volume_of_the_solution_in_the_tank" />

        <LinearLayout
            android:id="@+id/L_tanks_volume_solution"
            style="@style/notes_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_tanks_diameter" />

                <EditText
                    android:id="@+id/et_tanksV_diameter"
                    style="@style/editText_vertical"
                    android:hint="D"
                    android:inputType="number|numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_tanks_cone_height" />

                <EditText
                    android:id="@+id/et_tanks_cone_height"
                    style="@style/editText_vertical"
                    android:hint="h1"
                    android:inputType="number|numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_tanks_cylinder_height" />

                <EditText
                    android:id="@+id/et_tanks_cylinder_height"
                    style="@style/editText_vertical"
                    android:hint="h2"
                    android:inputType="number|numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_tanks_volume_solution" />

                <EditText
                    android:id="@+id/et_tanks_volume_solution"
                    style="@style/editText_vertical_calculate" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/tank_volume" />

            <Button
                android:id="@+id/btn_tanksF_volume_solution_calculate"
                style="@style/button_calculate" />


        </LinearLayout>


        <Button
            android:id="@+id/btn_tanks3"
            style="@style/button_main"
            android:text="@string/text_btn_tanks3_loss_CO2" />

        <LinearLayout
            android:id="@+id/L_tanks3"
            style="@style/notes_view"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_volume_tank" />

                <EditText
                    android:id="@+id/et_tanks3_volume_tank"
                    style="@style/editText_vertical"
                    android:inputType="number|numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_atmospheric_pressure" />

                <EditText
                    android:id="@+id/et_tanks3_atmospheric_pressure"
                    style="@style/editText_vertical"
                    android:inputType="number|numberDecimal"
                    android:text="0.98" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_pressure_in_tank" />

                <EditText
                    android:id="@+id/et_tanks3_pressure_in_tank"
                    style="@style/editText_vertical"
                    android:inputType="number|numberDecimal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_concentration_naoh" />

                <EditText
                    android:id="@+id/et_tanks3_concentration_naoh"
                    style="@style/editText_vertical"
                    android:inputType="number|numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_quantity_of_caustic_beats" />

                <EditText
                    android:id="@+id/et_tanks3_quantity_of_caustic_beats"
                    style="@style/editText_vertical"
                    android:inputType="number|numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_net_impact" />

                <EditText
                    android:id="@+id/et_tanks3_net_impact"
                    style="@style/editText_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_temperature_in_tank" />

                <EditText
                    android:id="@+id/et_tanks3_temperature_in_tank"
                    style="@style/editText_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/tv_losses_pressure_loss" />

                <EditText
                    android:id="@+id/et_tanks3_pressure_loss"
                    style="@style/editText_vertical_calculate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_residual_pressure" />

                <EditText
                    android:id="@+id/et_tanks3_residual_pressure"
                    style="@style/editText_vertical_calculate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/table_text_vertical"
                    android:text="@string/text_tv_tanks3_loss_CO2" />

                <EditText
                    android:id="@+id/et_tanks3_loss_CO2"
                    style="@style/editText_vertical_calculate" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_tanks3_calculate"
                style="@style/button_calculate" />

        </LinearLayout>



    </LinearLayout>
</ScrollView>

